limitless: define API and MongoDB implementation
Signed-off-by: Leonardo Rossi <leonardo.rossi@studenti.unipr.it>

--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,15 @@
 {erl_opts, [debug_info]}.
+{cover_enabled, true}.
 {deps, []}.
+{profiles, [
+  {test, [
+    {deps, [
+      {uuid,
+        {git, "https://github.com/avtobiff/erlang-uuid.git",
+          {branch, master}}},
+      {mongopool,
+        {git, "https://github.com/hachreak/mongopool.git", {branch, master}}}
+    ]}
+  ]}
+]}.
+{vim_erlang_compiler, {profile, "test"}}.
