installation: erlang_decorator@master
Signed-off-by: Leonardo Rossi <leonardo.rossi@studenti.unipr.it>

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,10 @@
 {erl_opts, [debug_info]}.
 {cover_enabled, true}.
-{deps, []}.
+{deps, [
+  {erlang_decorators,
+    {git, "https://github.com/egobrain/erlang_decorators.git",
+      {branch, master}}}
+]}.
 {profiles, [
   {test, [
     {deps, [
